# Hotas-Controller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  X56_Hotas_hid_bit_map.csv  filter_settings.cfg  imgui.ini  mappings.json
res/: app.manifest  version.h  version.rc
res/config/: X56_Hotas_hid_bit_map.csv  filter_settings.cfg  mappings.json
src/: main.cpp
src/core/: ring_buffer.hpp
src/ui/: plots_panel.cpp  plots_panel.hpp
src/xinput/: filtered_forwarder.hpp  hotas_mapper.cpp  hotas_mapper.hpp  hotas_reader.cpp  hotas_reader.hpp  vigem_dynamic.cpp  vigem_dynamic.hpp  virtual_output.hpp  xinput_poll.cpp  xinput_poll.hpp
